getting task metadata from description files