@@ -32,49 +32,32 @@ public class ExporterService {
     public void initDb(Collection<Path> dirs) {
         dirs.stream()
                 .map(PseudoYAMLParser::parseDir)
-                .flatMap(Collection::stream)
-//                .peek(System.out::println)
-                .collect(Collectors.toList())
+                .flatMap(Collection::stream).toList()
+                .stream().filter(linkage -> !linkage.subtask().getName().equals("description"))
                 .forEach(linkage -> {
                     Task task = mergeWithPersistedTask(linkage.task());
                     Task subtask = mergeWithPersistedTask(linkage.subtask());
                     task.getSubTasks().add(subtask);
                     entityDAO.save(task);
                 });
-
-        Integer integer = new Integer(1);
     }
 
-    @NotNull
-    private Function<Task, Task> replaceOneWith(Task savedSubtask) {
-        return tsk ->
-             !Objects.equals(tsk.getTaskId(), savedSubtask.getTaskId()) ?
-                    tsk : savedSubtask;
-    }
-
-    // todo
-    private Task mergeWithPersistedTask(Task taskTO) {
-        Task mergedTask;
-        Optional<Task> taskFromDbOpt = entityDAO.findByLocallySavedURI(taskTO.getLocallySavedURI());
-        if (taskFromDbOpt.isPresent()) {
-            Task taskFromDb = taskFromDbOpt.get();
-            ofNullable(taskTO.getTaskId()).ifPresent(taskFromDb::setTaskId);
-            ofNullable(taskTO.getName()).ifPresent(taskFromDb::setName);
-            ofNullable(taskTO.getDescription()).ifPresent(taskFromDb::setDescription);
-            ofNullable(taskTO.getLocallySavedURI()).ifPresent(taskFromDb::setLocallySavedURI);
-
-//            Stream<Task> subtasksFromTo = taskTO.getSubTasks().stream().map(subtask -> entityDAO.findByLocallySavedURI(subtask.getLocallySavedURI()))
-//                    .flatMap(Optional::stream);
-//            Stream<Task> subtasksFromDb = taskFromDb.getSubTasks().stream();
-//            List<Task> subtasks = Stream.concat(subtasksFromTo, subtasksFromDb).collect(Collectors.toList());
-//            taskFromDb.setSubTasks(subtasks);
-
-            mergedTask = entityDAO.save(taskFromDb);
+    private Task mergeWithPersistedTask(Task transientTask) {
+        Task persistedTask;
+        Optional<Task> persistedTaskOpt = entityDAO.findByLocallySavedURI(transientTask.getLocallySavedURI());
+        if (persistedTaskOpt.isPresent()) {
+            Task taskFromDb = persistedTaskOpt.get();
+            ofNullable(transientTask.getTaskId()).ifPresent(taskFromDb::setTaskId);
+            ofNullable(transientTask.getName()).ifPresent(taskFromDb::setName);
+            ofNullable(transientTask.getDescription()).ifPresent(taskFromDb::setDescription);
+            ofNullable(transientTask.getLocallySavedURI()).ifPresent(taskFromDb::setLocallySavedURI);
+            of(transientTask.isProject()).ifPresent(taskFromDb::setProject);
+            persistedTask = entityDAO.save(taskFromDb);
         }
         else {
-            mergedTask = entityDAO.save(taskTO);
+            persistedTask = entityDAO.save(transientTask);
         }
-        return mergedTask;
+        return persistedTask;
     }
 
 
